--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{ 
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 .body{
     background-color: cadetblue;
@@ -26,17 +31,11 @@
 }
 
 .navbar a:hover{ /*avoir de la couleur au survol*/
-    background-color: black;
-    color:white;
+    text-decoration: underline;
 }
 
 
-.navbar a.active{
-    background-color: black;
-    color: white;
-}
 
 .card-title{
     font-style: italic; /*style d'écriture*/
-
 }
